Changed the Readme for better understanding, added the Julia environment

--- a/main.ipynb
+++ b/main.ipynb
@@ -28,21 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "906e164e",
+   "execution_count": null,
+   "id": "9ad103c5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m new project at `C:\\Users\\grnma\\AppData\\Local\\Temp\\jl_8078lL`\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "using Pkg\n",
-    "Pkg.activate(mktempdir());"
+    "# Code to activate the environment and instantiate dependencies\n",
+    "\n",
+    "import Pkg\n",
+    "\n",
+    "Pkg.activate(Base.dirname(Base.current_project()) == nothing ? \".\" : Base.dirname(Base.current_project()))\n",
+    "Pkg.instantiate()   # ensures anyone who opens the notebook gets exact deps"
    ]
   },
   {
