Updated the manifest/project, wrote the introduction to the notebook with relevant docs/links.

--- a/main.ipynb
+++ b/main.ipynb
@@ -6,30 +6,32 @@
    "metadata": {},
    "source": [
     "## Title - Master's Thesis\n",
-    "#### Author : Matthieu Grenier\n",
+    "##### Author : Matthieu Grenier\n",
     "\n",
-    "This notebook provides the code associated with the Master's thesis \"\". The code was written in Julia 1.11.6.\n",
+    "This notebook provides the code associated with the Master's thesis \"Has my value function converged ? A comparison of solution methods\".\n",
     "\n",
-    "***\n",
+    "This notebook was written in Julia 1.11.6. It is an open-source language suited for statistics and Machine Learning, designed for high performance. The language relies on just-in-time (JIT) compilation. This happens to be well suited for dynamic programming. Indeed, dynamic programming workloads rely on tight loops and repeated linear algebra. Julia’s JIT compiler (LLVM) makes plain, readable loops fast without resorting to compiled low-level languages such as C or Fortran. The language is strongly typed, thus the user has the freedom of setting its own types, or let the language automatically infer what suits best. Therefore, value and policy iteration run at compiled speeds.\n",
     "\n",
-    "#### The consumption-saving problem\n",
-    "\n",
-    "As per the article of Maliar et al.(2021), we overlook the consumption-saving problem and solve using various methods. A baseline result is obtained using non-linear solvers, and we proceed by comparing 4 options :\n",
-    "- Perturbation methods\n",
-    "- Projection methods\n",
-    "- Deep Learning methods à la Maliar et al.(2021)\n",
-    "- Enhanced DL method\n",
+    "For a great introduction, see *Statistics with Julia: Fundamentals for Data Science, Machine Learning and Artificial Intelligence* (Nazarathy & Klok, 2021). One can also get familiar with Julia and its application to economics on the [QuantEcon website](https://quantecon.org/).\n",
     "\n",
     "\n",
-    "This example is fairly simple, but allows for proper representation of how neural networks can be useful when dealing with kinks in the decision rule. Such kinks arise in most dynamic economic models when a given constraint is binding (for instance the implementation of the ZLB in the HANK model, see ???).\n",
+    "The code outputs, graphs and tables are reproducible by a third-party (random seeds are fixed). To do so, the reader is welcome to make use of the Julia environment associated with the notebook. Additional informations can be found in the [Pkg.jl documentation](https://pkgdocs.julialang.org/v1/environments/). \n",
     "\n",
-    "This notebook was written in Julia. It is an open-source language, designed for high performance. It supports parallelization and multiple dispatch, which happens to be ideal for the sake of the thesis. The code outputs, graphs and tables are reproducible by a third-party. To do so, the reader is welcome to make use of the Julia environment associated with the notebook. Additional informations can be found in the [Pkg.jl documentation](https://pkgdocs.julialang.org/v1/environments/)"
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5c39173",
+   "metadata": {},
+   "source": [
+    "### Environment setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9ad103c5",
+   "execution_count": 4,
+   "id": "694e546f",
    "metadata": {},
    "outputs": [
     {
@@ -51,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "2fc0e7df",
+   "execution_count": 5,
+   "id": "0fb8a0c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +64,31 @@
     "using QuantEcon, Interpolations, FastChebInterp, NLsolve, Optim, QuadGK\n",
     "using Plots, LaTeXStrings\n",
     "using ForwardDiff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31ebbca6",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca6a4838",
+   "metadata": {},
+   "source": [
+    "### The consumption-saving problem\n",
+    "\n",
+    "As per the article of Maliar et al.(2021), we overlook the consumption-saving problem and solve using various methods. A baseline result is obtained using non-linear solvers, and we proceed by comparing 4 options :\n",
+    "- Perturbation methods\n",
+    "- Projection methods\n",
+    "- Deep Learning methods à la Maliar et al.(2021)\n",
+    "- Enhanced DL method\n",
+    "\n",
+    "\n",
+    "This example is fairly simple, but allows for proper representation of how neural networks can be useful when dealing with kinks in the decision rule. Such kinks arise in most dynamic economic models when a given constraint is binding (for instance the implementation of the ZLB in the HANK model, see ???).\n"
    ]
   },
   {
@@ -110,20 +137,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a1d7e533",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(β = 0.9, r = 1.04, γ = 2.0, ρ = 0.0, σ = 0.1, ā = 0.0, Na = 500, a_min = 0.0, a_max = 50.0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = (;\n",
     "    β = 0.9, # Discount factor\n",
@@ -140,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "614a6ad9",
    "metadata": {},
    "outputs": [],
@@ -154,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "83660580",
    "metadata": {},
    "outputs": [],
