Time for strucure !! Added everything necessary to be rigorous :)

--- a/main.ipynb
+++ b/main.ipynb
@@ -140,8 +140,21 @@
    "execution_count": null,
    "id": "a1d7e533",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(β = 0.9, r = 1.04, γ = 2.0, ρ = 0.0, σ = 0.1, ā = 0.0, Na = 500, a_min = 0.0, a_max = 50.0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "# The exogenous parameters for the model are specified here\n",
+    "# Explanations of the parameter values can be found in Appendix A\n",
+    "\n",
     "model = (;\n",
     "    β = 0.9, # Discount factor\n",
     "    r = 1.04, # Interest rate\n",
@@ -157,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "614a6ad9",
    "metadata": {},
    "outputs": [],
@@ -171,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "83660580",
    "metadata": {},
    "outputs": [],
